# Black-Hole-Sim-Using-Docker

./: CMakeLists.txt  Dockerfile  Mathematical Background.md  README.md  docker-compose.yml
config/: simulation.json
scripts/: build.sh  run-macos.sh  run-windows.bat
shaders/: fragment.frag  geodesic.comp  grid.frag  grid.vert  vertex.vert
src/: main.cpp
src/engine/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Renderer.cpp  Renderer.h
src/objects/: Object.cpp  Object.h
src/physics/: BlackHole.cpp  BlackHole.h  Physics.cpp  Physics.h
src/utils/: Config.cpp  Config.h  Logger.cpp  Logger.h
